[package]
name = "subreddit-posts-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "subreddit_posts_app"
path = "src/main.rs"

[lib]
name = "subreddit_posts_logic"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"
reqwest = { version = "0.11.10", features = ["json"]}
string_template = "0.2.1"
uuid = { version = "0.8.2", features = ["v4"] }
webbrowser = "0.6.0"
actix-web = "4"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_urlencoded = "0.7.1"
serde_json = "1.0.79"