[package]
name = "subreddit-posts-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "subreddit_posts_app"
path = "src/main.rs"

[lib]
name = "subreddit_posts_logic"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.10.0"
reqwest = { version = "0.11", features = ["json"]}
string_template = "0.2.1"
uuid = { version = "1.4", features = ["v4"] }
webbrowser = "0.8"
actix-web = "4"
serde = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.7"
serde_json = "1.0"